Add Romanian translation

--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -16,3 +16,5 @@ X-KDE-PluginInfo-Version=13
 X-KDE-PluginInfo-Website=https://github.com/Zren/plasma-applet-todolist
 X-KDE-PluginInfo-KdeStoreId=1152230
 X-KDE-PluginInfo-Category=Utilities
+
+Name[ro]=Listă cu lucruri de făcut
